# yingzaofashi_rag_backend

./: .gitignore  .pgpass  custon_char.text  langgraph.json  pyproject.toml  pyvenv.cfg  requirements.installed.before-clean.txt  requirements.txt
.cursor/rules/: project-backgroung.mdc
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: connect.py  main.py  models.py
app/agent/: __init__.py  graph.py  langgraph_app.py  nodes.py  prompts.py  state.py
app/api/: auth.py  chat.py  messages.py  sessions.py
app/db/: rag_tables.sql
app/rag/: __init__.py  embedding.py  retriever.py  retriever_helpers.py
app/rag_v2/: __init__.py  filters.py  fusion.py  hybrid_search.py  intent_llm.py  relations.py  retrievers.py  schemas.py
data/: out.jsonl
exper_data/: retriever_eval_detail.csv  retriever_eval_detail.jsonl  retriever_eval_report.md  retriever_eval_summary.json  retriever_experiment.jsonl
exper_data/v1/: retriever_eval_detail.jsonl  (+1 more)
prd/: api_doc2.md  data_backend.md  database.md  login_prd.md  rag.md  rag_v2.md  rag_v3.md  retriever_experiment.md  retriever_optimize.md
resources/: jieba_userdict.txt
scripts/: agent_smoke_test.py  build_retriever_experiment_dataset.py  jiansuo.ipynb  langgraph_dev.ps1  migrate_document_ids_en_short.py  migrate_rag_tables.py  migrate_readable_book_ids_and_toc_tsvector.py  rag_batch_test.py  retriever_offline_eval.py  retriever_test.py  run_agent_langsmith.py  test.py  test_rag_v2_langsmith.py  view_chunks.py
(+18 files in other folders)
