[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yingzaofashi-rag-backend"
version = "0.1.0"
description = "RAG FastAPI backend (YingZaoFaShi)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.34.0",
    "psycopg2-binary==2.9.11",
    "sqlmodel==0.0.22",
    "SQLAlchemy==2.0.40",
    "pgvector==0.4.2",
    "pydantic==2.11.3",
    "python-dotenv==1.1.0",
    "openai==1.80.0",
    "PyJWT==2.10.1",
    "passlib==1.7.4",
    "argon2-cffi==25.1.0",
    "jieba==0.42.1",
    "numpy==2.2.5",
    "tabulate==0.9.0",
    "langchain-core==0.3.83",
    "langchain-openai==0.3.18",
    "langgraph==0.2.76",
    "langsmith==0.7.22",
    "langgraph-cli[inmem]>=0.3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
